Git ignore for text mesh pro and scene cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+Space shooter/Assets/TextMesh Pro/Examples & Extras/
+
+Space shooter/Assets/TextMesh Pro/
